# NaoMedicalTranslateApp

./: .gitignore  Pasted--24-Microsoft-David-English-United-States-en-US-Microsoft-Ravi-English-India-en-I-1731975313577.txt  Pasted-Healthcare-Translation-Web-App-with-Generative-AI-Objective-Develop-a-web-based-prototype-that-e-1731976543342.txt  Pasted-Healthcare-Translation-Web-App-with-Generative-AI-Objective-Develop-a-web-based-prototype-that-ena-1731968348663.txt  README.md  app.py  clean_github_push.sh  clean_push.sh  cleanup_and_push.sh  generate_docs.py  github_push.sh  main.py  pyproject.toml  requirements.txt  vercel.json
api/: wsgi.py
static/css/: custom.css
static/js/: app.js  speech.js
templates/: base.html  index.html
utils/: translator.py
