[project]
name = "repl-nix-healthtransai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-socketio>=5.4.1",
    "googletrans==3.1.0a0",
    "eventlet>=0.37.0",
    "openai>=0.28.1",
]
